--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,20 @@
 name: app_theme_with_getx
-description: A new Flutter project to change app theme using the getx package.
-
-publish_to: "none"
-
 version: 1.0.0+1
+publish_to: none
+description: A new Flutter project to change app theme using the getx package.
+environment: 
+  sdk: '>=2.12.0 <3.0.0'
 
-environment:
-  sdk: ">=2.12.0 <3.0.0"
-
-dependencies:
-  flutter:
-    sdk: flutter
+dependencies: 
   cupertino_icons: ^1.0.2
-  get: ^4.1.4
-
-dev_dependencies:
-  flutter_test:
+  get: 4.1.4
+  flutter: 
     sdk: flutter
 
-flutter:
+dev_dependencies: 
+  flutter_test: 
+    sdk: flutter
+
+flutter: 
   uses-material-design: true
+
